<resources>
    <string name="app_name">Личный кабинет</string>
    <string name="login_login_hint">Логин</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_enter_btn">Войти</string>
    <string name="login_registration_btntxt">Регистрация</string>

    <string name="registration_email_hint">Email</string>
    <string name="registration_telephone_hint">Телефон</string>
    <string name="registration_name_hint">Имя</string>
    <string name="registration_surname_hint">Фамилия</string>
    <string name="registration_create_btn">Создать</string>

    <string name="add_address_create_btn">Добавить</string>
    <string name="add_address_country_hint">Страна</string>
    <string name="add_address_city_hint">Город</string>
    <string name="add_address_street_hint">Улица/Проспект</string>
    <string name="add_address_home_number_hint">Дом</string>
    <string name="add_address_apartment_hint">Квартира</string>

    <string name="menu_drawer_add_address_text">Добавить адрес</string>
    <string name="menu_drawer_add_room_text">Добавить комнату</string>
    <string name="menu_drawer_activate_counter_text">Активировать счетчик</string>
    <string name="menu_drawer_addresses_text">Посмотреть счетчики</string>
    <string name="menu_drawer_exit_text">Выйти</string>


    <string name="add_room_name_hint">Название</string>
    <string name="add_room_create_btn">Добавить</string>

    <string name="activate_counter_btntxt">Активировать</string>
    <string name="add_address_login_hint">Введите логин</string>

    <string name="fragment_addresses_select_address_hint">Выберите адрес</string>

</resources>
