<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:hint="@string/login_login_hint"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_login_edt"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/login_login_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_login_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_login_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edt"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <ProgressBar
        android:id="@+id/progress_login_prb"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/login_enter_btn"
        app:layout_constraintStart_toStartOf="@+id/login_enter_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_enter_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_enter_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_enter_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_password_layout"
        app:layout_constraintStart_toStartOf="@+id/login_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/login_password_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_registration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/login_registration_btntxt"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_enter_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>